[update] APIの追加
